made the nav bar disappear when the search icon is clicked because of a bug that made items disappear out of screen on smaller screens before, the search bar also expands much more when a user clicks it now

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,7 @@
   height: 4.75rem;
   max-height: 4.75rem;
   padding-left: 3.125rem;
-  justify-content: center;
+  justify-content: space-between;
   padding-right: 3.125rem;
+  position: relative;
 }
