--- a/src/components/Header/SearchBar/Search.module.scss
+++ b/src/components/Header/SearchBar/Search.module.scss
@@ -3,6 +3,10 @@
   align-items: center;
   font-size: 1.5rem;
   line-height: 1.2rem;
+  position: absolute;
+  top: 50%;
+  right: 12.25rem;
+  transform: translateY(-50%);
 }
 
 .searchIcon {
@@ -22,7 +26,7 @@
   border: solid;
   border-color: var(--border-color);
   border-radius: 1rem;
-  width: 13rem;
+  width: 18rem;
   transition: width 0.7s ease;
   background-color: var(--background-color);
   color: var(--text-color);
@@ -30,5 +34,5 @@
 
 .expandedSearchBar:focus {
   outline: none;
-  width: 20rem;
+  width: 52rem;
 }
