--- a/src/components/Header/ThemeSelector/ThemeSelector.module.scss
+++ b/src/components/Header/ThemeSelector/ThemeSelector.module.scss
@@ -3,6 +3,7 @@
   line-height: 1.2rem;
   color: var(--text-color);
   padding: 0 1rem;
+  margin-left: auto;
 }
 
 .toggle:hover {
